--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Bappedalitbang Kabupaten Bogor - Inovation Mobile Center</string>
+    <string name="app_name">Inovation Mobile Center</string>
+    <string name="bappeda">Bappedalitbang\nKabupaten Bogor</string>
 
     <!--Component Bottom Navigation Bar-->
     <string name="Dashboard_nav">Dashboard</string>
@@ -19,15 +20,25 @@
     <string name="greet_sore">Halo,\nSelamat Sore !</string>
     <string name="greet_malam">Halo,\nSelamat Malam !</string>
 
-    <string name="profile_about">Profile</string>
-    <string name="profile_title">Bappedalitbang Kabupaten Bogor</string>
-    <string name="profile_desc">Bappedalitbang Kabupaten Bogor merupakan salah satu lembaga teknis daerah di lingkungan Pemerintah Kabupaten Bogor yang dibentuk berdasarkan Peraturan Bupati (PerBup) Kabupaten Bogor Nomor 69 Tahun 2017 tentang Kedudukan, Susunan Organisasi, Tugas dan Fungsi Badan Perencanaan Pembangunan, Penelitian dan Pengembangan Daerah. Berdasarkan Perbup tersebut Bappedalitbang mempunyai tugas pokok membantu Bupati dalam melaksanakan penyusunan dan pelaksanaan kebijakan daerah di bidang perencanaan pembangunan daerah.</string>
+    <string name="dt_inovasi">Detail Inovasi</string>
+    <string name="dt_inovator">Detail Inovator</string>
+
+    <string name="info">Basic Info Inovator</string>
+    <string name="ttl">Tempat Tanggal Lahir</string>
+    <string name="gender">Jenis Kelamin</string>
+    <string name="alamat">Alamat</string>
+    <string name="in">List Inovasi yang dibuat</string>
+    <string name="kt">Kategori Inovator</string>
+
+    <string name="profil_desc">Bappedalitbang Kabupaten Bogor merupakan salah satu lembagateknis daerah di lingkungan\nPemerintah Kabupaten Bogor yang dibentuk berdasarkan Peraturan Bupati (PerBup) Kabupaten Bogor Nomor 69 Tahun 2017 tentang Kedudukan, Susunan Organisasi, Tugas dan Fungsi Badan Perencanaan Pembangunan, Penelitian dan Pengembangan Daerah.\n</string>
+    <string name="tugas_desc">Penyusunan, pelaksanaan, pemantauan, hingga pelaksanaan, dalam ruang lingkup kebijakan teknis di bidang perencanaan, penelitian, dan pengembangan daerah.</string>
+    <string name="strategi_desc">1). Menjalin kerja sama dengan instansi\n2). Meningkatkan intensitas social pada industry 4.0\n3). Mengajukan rancangan pembangungan daerah\n4). Optimalisasi anggaran dalam pencapaian visi misi kepala daerah</string>
 
     <string name="empty_search">Hasil Pencarian Masih Kosong</string>
     <string name="det_empty_search">Whoops… hasil pencarian masih belum bisa ditampilkan</string>
 
     <string name="no_connection">Koneksi Internet Tidak Terdeteksi</string>
-    <string name="det_no_connection">Whoops… koneksi internet tidak terdeteksi. Periksa koneksi internet anda dan coba lagi</string>
+    <string name="det_no_connection">Whoops… koneksi internet anda tidak terdeteksi. Periksa koneksi internet anda dan coba lagi</string>
     <string name="coba_lagi">Coba lagi</string>
 
     <string name="btn_text_inovator_search">Cari Inovator</string>
@@ -36,6 +47,7 @@
     <string name="text_list_inovasi">List Inovasi</string>
 
     <string name="semua_kategori">Semua Kategori</string>
+    <string name="kategori">Kategori</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
