add some stuff and fixed certain bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Inovation Mobile Center</string>
+    <string name="app_name">Innovation Mobile Center</string>
     <string name="bappeda">Bappedalitbang\nKabupaten Bogor</string>
 
     <!--Component Bottom Navigation Bar-->
